--- a/styles.css
+++ b/styles.css
@@ -77,8 +77,8 @@
 }
 
 .center {
+  position: fixed;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 100%;
+  left: 50px;
+  bottom: 50px;
 }
