--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@
   margin-left: 250px; /* Same as the width of the sidebar */
   padding: 0px 10px;
   font-family: 'IBM Plex Mono', monospace;
+  width: 1000px;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
@@ -50,6 +51,11 @@
   height: 3px;
   margin: 0;
   flex-grow: 1;
+}
+
+.tekst{
+  text-align:justify;  
+  text-justify:auto;
 }
 
 .red {
