--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,13 @@
   font-family: 'IBM Plex Mono', monospace;
   width: 52%;
 }
+/* Links */
+.lynx {
+  margin-left: 250px; /* Same as the width of the sidebar */
+  padding: 0px 10px;
+  font-family: 'IBM Plex Mono', monospace;
+  width: 70%;
+}
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
