--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
-  .main {width: 1000}
+  .main {width: 80%}
 }
 
 .box {
