--- a/styles.css
+++ b/styles.css
@@ -42,11 +42,11 @@
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
+/*@media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
   .main {width: 80%}
-}
+}*/
 
 .box {
   display: flex;
